Utility class cleanup